--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,14 +1,29 @@
-.container {
+
+
+@mixin col($wid){
   display: flex;
   flex-direction: column;
-  align-items: center;
-  text-align: center;
-  margin-top: 20px;
-
-  .image {
-    width: 300px;
+  justify-content: center;
+  width: $wid;
+}
+.resume {
+  width: 100%;
+  height: 100%;
+  border-radius: 8px;
+  display: flex;
+  flex-direction: row;
+  margin-block-end: 5%;
+  .left-col {
+    @include col(100%);
+    align-items: flex-start;
+    //padding: 60px;
+    //margin-top: 100px;
+    flex: 4;
+  }
+  .right-col {
+    @include col(120%);
     height: auto;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    flex: 8;
   }
 }
+
