--- a/src/app/left-side-section/left-side-section.component.html
+++ b/src/app/left-side-section/left-side-section.component.html
@@ -9,16 +9,23 @@
     </div>
     <div class ="under_header">
       <h2 class="subtitle1"><strong> Contact</strong></h2>
-      <div class="inf1">
+
+      <div class="inf1" *ngIf="showContact">
         <p class="contact1"><strong>Phone</strong> <br>+000 123 456 789</p>
         <p class="contact1"><strong>Email</strong> <br>yourname&#64;gmail.com</p>
         <p class="contact1"><strong>Address</strong> <br>Your Street Address<br>Town/City, zip code</p>
       </div>
+      <button (click)="toggleContact()">Toggle Contact</button>
+
       <h2 class="subtitle1"><strong> Education</strong></h2>
       <div class="inf1">
-        <div class="contact1"> Year: 2005-2007
-          <p class="contact2"><strong> Degree / Major Name</strong></p>
-          Your College name here</div>
+
+        <div class="contact1" *ngFor="let edu of education">
+          Year: {{ edu.year }}
+          <p class="contact2"><strong>{{ edu.degree }}</strong></p>
+          {{ edu.institution }}
+        </div>
+
         <div class="contact1"> Year: 2005-2007
           <p class="contact2"><strong> Degree / Major Name</strong></p>
           Your College name here</div>                    </div>
