--- a/src/app/left-side-section/left-side-section.component.scss
+++ b/src/app/left-side-section/left-side-section.component.scss
@@ -58,3 +58,18 @@ margin-top: 50%;
   justify-content: $jus;
   margin-top: $mar;
 }
+.custom-btn {
+  background-color: #3498db;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  font-size: 16px;
+  //border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.custom-btn:hover {
+  background-color: #2980b9;
+}
+
