--- a/src/app/left-side-section/reference-section/reference-section.component.html
+++ b/src/app/left-side-section/reference-section/reference-section.component.html
@@ -8,11 +8,6 @@
     </p>
   </div>
 
-  <div class="contact1">
-    <strong>{{ name2 }}</strong>
-    <p class="contact2">
-      <strong>{{ title2 }}</strong>
-      <br>Phone: {{ phone2 }}
-    </p>
-  </div>
+<!--  <button (click)="sendUpdatedReference()">Send Reference</button>-->
+
 </div>
