--- a/src/app/right-side-section/right-side-section.component.html
+++ b/src/app/right-side-section/right-side-section.component.html
@@ -1,28 +1,30 @@
 <h2 class="subtitle4">Software Skill</h2>
 <div class="skills-columns">
   <div class ="skill1">
-<div class="contact4">
-  <strong>Adobe Photoshop</strong><br>
-  <strong>Adobe Illustrator</strong><br>
-  <strong>Adobe Indesign</strong><br>
-  <strong>Microsoft Office</strong><br>
-  <strong>MS Powerpoint</strong>
-</div>
+    <div class="contact4">
+      <strong>Adobe Photoshop</strong><br>
+      <strong>Adobe Illustrator</strong><br>
+      <strong>Adobe Indesign</strong><br>
+      <strong>Microsoft Office</strong><br>
+      <strong>MS Powerpoint</strong>
+    </div>
   </div>
-  <div class="progress-bar">
-    <div class="progress" style="width: 83%;"></div> <!-- Прогрес на 90% -->
-  </div>
-  <div class="progress-bar">
-    <div class="progress" style="width: 88%;"></div> <!-- Прогрес на 70% -->
-  </div>
-  <div class="progress-bar">
-    <div class="progress" style="width: 78%;"></div> <!-- Прогрес на 80% -->
-  </div>
-  <div class="progress-bar">
-    <div class="progress" style="width: 88%;"></div> <!-- Прогрес на 50% -->
-  </div>
-  <div class="progress-bar">
-    <div class="progress" style="width: 78%;"></div> <!-- Прогрес на 60% -->
+  <div class="skill2">
+    <div class="progress-bar">
+      <div class="progress" style="width: 83%;"></div> <!-- Прогрес на 90% -->
+    </div>
+    <div class="progress-bar">
+      <div class="progress" style="width: 88%;"></div> <!-- Прогрес на 70% -->
+    </div>
+    <div class="progress-bar">
+      <div class="progress" style="width: 78%;"></div> <!-- Прогрес на 80% -->
+    </div>
+    <div class="progress-bar">
+      <div class="progress" style="width: 88%;"></div> <!-- Прогрес на 50% -->
+    </div>
+    <div class="progress-bar">
+      <div class="progress" style="width: 78%;"></div> <!-- Прогрес на 60% -->
+    </div>
   </div>
 </div>
 <div class="container">
@@ -43,6 +45,4 @@
     consectetur adipiscing elit, sed do eiusmod tempor<br>
     incididunt ut labore et dolore magna aliqua. Ut</p>
 
-
 </div>
-
