end lab of api-post

--- a/src/app/photo-and-about/photo-and-about.component.scss
+++ b/src/app/photo-and-about/photo-and-about.component.scss
@@ -52,6 +52,20 @@ strong {
   object-fit: cover;
 }
 
+.custom-btn {
+  background-color: $light-grey;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  font-size: 16px;
+  //border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.custom-btn:hover {
+  background-color: $light-grey;
+}
 
 .dark_blue{
   width: auto;
