--- a/src/app/photo-and-about/photo-and-about.component.html
+++ b/src/app/photo-and-about/photo-and-about.component.html
@@ -9,6 +9,6 @@
   <p class="contact3">{{ aboutText }}</p>
 
   <textarea [(ngModel)]="newAbout" placeholder="Enter smth about Jhon Parker"></textarea>
-  <button (click)="sendNewText()">Send</button>
+  <button (click)="sendNewText()" class="custom-btn" >Send</button>
 </div>
 
