--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,8 @@
 <img src="/pic/IMG.jpg" alt="dog" class="image">-->
 
 <div class="container">
+<!--  <button (click)="logout()" class="custom-btn">LogOut</button>-->
+
   <div class="row resume">
     <div class="col-5 left-col">
     <app-left-side-section></app-left-side-section>
@@ -16,6 +18,7 @@
         <div class="row">
           <app-right-side-section></app-right-side-section>
         </div>
+
       </div>
 
     </div>
