--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,4 @@
-
+$light-grey: darkslategray;
 
 @mixin col($wid){
   display: flex;
@@ -25,5 +25,20 @@
     height: auto;
     flex: 8;
   }
+}
+
+.custom-btn {
+  background-color: $light-grey;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  font-size: 16px;
+  //border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.custom-btn:hover {
+  background-color: $light-grey;
 }
 
