--- a/src/app/left-side-section/left-side-section.component.scss
+++ b/src/app/left-side-section/left-side-section.component.scss
@@ -73,3 +73,41 @@ margin-top: 50%;
   background-color: $light-grey;
 }
 
+
+// left-side-section.component.scss
+/* left-side-section.component.scss */
+//.modal-backdrop {
+//  position: fixed;
+//  top: 0; left: 0; right: 0; bottom: 0;
+//  background: rgba(0,0,0,0.5);
+//  display: flex;
+//  align-items: center;
+//  justify-content: center;
+//  z-index: 999;
+//}
+//
+//.modal {
+//  background: white;
+//  padding: 2rem;
+//  border-radius: 8px;
+//  box-shadow: 0 0 10px black;
+//}
+.modal-backdrop {
+  position: fixed;
+  top: 0; left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1000;
+}
+
+.modal {
+  background: white;
+  padding: 20px;
+  border-radius: 10px;
+}
+
+
